lab05/demo/src/main/java/org/example/errors/ErrorHandler.java
package org.example.errors;

public interface ErrorHandler {
    String errorMessage();
    boolean tryDoIt();
    void fix();
}
